force-app/main/default/objects/EdFund_Partner__c/EdFund_Partner__c.object-meta.xml
<CustomObject>
    <label>EdFund Partner</label>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EdFund Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>