force-app/main/default/objects/EdFund_Partner__c/fields/Partner_Category__c.field-meta.xml
<CustomField>
    <fullName>Partner_Category__c</fullName>
    <label>Partner Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate (Owner)</fullName>
            </value>
            <value>
                <fullName>Stakeholder</fullName>
            </value>
            <value>
                <fullName>Union</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>