force-app/main/default/objects/EdFund_Partner__c/fields/Partner_Notes__c.field-meta.xml
<CustomField>
    <fullName>Partner_Notes__c</fullName>
    <label>Partner Notes</label>
    <type>TextArea</type>
</CustomField>