force-app/main/default/objects/EdFund_Partner__c/fields/Partner_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Phone_Number__c</fullName>
    <label>Partner Phone Number</label>
    <type>Phone</type>
</CustomField>