force-app/main/default/objects/EdFund_Partner__c/fields/Partner_Website_Address__c.field-meta.xml
<CustomField>
    <fullName>Partner_Website_Address__c</fullName>
    <label>Partner Website Address</label>
    <type>Url</type>
</CustomField>